# dateutils

./: .gitignore  .gitmodules  AUTHORS  Makefile.am  README  bootstrap.conf  configure.ac
src/: Makefile.am  dateadd.c  datediff.c
